# ovos-dialog-normalizer-plugin

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_tests.yml  publish_stable.yml  release-preview.yml  release_workflow.yml  repo-health.yml  unit_tests.yml
ovos_dialog_normalizer_plugin/: __init__.py  util.py  version.py
ovos_dialog_normalizer_plugin.egg-info/: PKG-INFO
ovos_dialog_normalizer_plugin/locale/ca/: titles.json
ovos_dialog_normalizer_plugin/locale/de/: titles.json  units.json
ovos_dialog_normalizer_plugin/locale/en/: contractions.json  titles.json  units.json
ovos_dialog_normalizer_plugin/locale/es/: titles.json  units.json
ovos_dialog_normalizer_plugin/locale/fr/: titles.json  units.json
ovos_dialog_normalizer_plugin/locale/gl/: titles.json
ovos_dialog_normalizer_plugin/locale/it/: titles.json
ovos_dialog_normalizer_plugin/locale/nl/: titles.json
ovos_dialog_normalizer_plugin/locale/pt/: titles.json  units.json
tests/: __init__.py  test_locale_files.py  test_version.py
